Edge slide results in segmentation fault on certain mesh #34415

Closed
opened 2013-02-25 04:48:51 +01:00 by James W · 4 comments
Member

%%%--- Operating System, Graphics card ---
Fedora 18 64bit, with Nvidia GeForce 8400M GS. I've attached my system-info.txt.

- Blender version with error, and version that worked ---

Trunk r54804, self-built.

- Short description of error ---

Blender crashes with a segmentation fault when edge sliding particular edges. May be a bit difficult to troubleshoot this because the topology is a bit strange.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open attached .blend, edges are already selected so just edge slide with either GG or Crtl+E >> Edge slide.%%%

%%%--- Operating System, Graphics card --- Fedora 18 64bit, with Nvidia GeForce 8400M GS. I've attached my system-info.txt. - Blender version with error, and version that worked --- Trunk r54804, self-built. - Short description of error --- Blender crashes with a segmentation fault when edge sliding particular edges. May be a bit difficult to troubleshoot this because the topology is a bit strange. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open attached .blend, edges are already selected so just edge slide with either GG or Crtl+E >> Edge slide.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed. My backtrace:

Reason: KERN_INVALID_ADDRESS at address: 0x0000000000000030
0x0000000100907e9b in bmiter__face_of_vert_begin (iter=0x7fff5fbfa500) at bmesh_iterators.c:302
302 if (iter->vdata->e)
(gdb) where

  • 0 0x0000000100907e9b in bmiter__face_of_vert_begin (iter=0x7fff5fbfa500) at bmesh_iterators.c:302
  • 1 0x00000001001ff213 in BM_iter_init [inlined] () at /Users/ton/bf-blender/blender/source/blender/bmesh/intern/bmesh_iterators_inline.h:146
  • 2 BM_iter_new [inlined] () at /Users/ton/bf-blender/blender/source/blender/bmesh/intern/bmesh_iterators_inline.h:162
  • 3 0x00000001001ff213 in createEdgeSlideVerts (t=0x10a126838) at bmesh_iterators_inline.h:5420%%%
%%%Confirmed. My backtrace: Reason: KERN_INVALID_ADDRESS at address: 0x0000000000000030 0x0000000100907e9b in bmiter__face_of_vert_begin (iter=0x7fff5fbfa500) at bmesh_iterators.c:302 302 if (iter->vdata->e) (gdb) where - 0 0x0000000100907e9b in bmiter__face_of_vert_begin (iter=0x7fff5fbfa500) at bmesh_iterators.c:302 - 1 0x00000001001ff213 in BM_iter_init [inlined] () at /Users/ton/bf-blender/blender/source/blender/bmesh/intern/bmesh_iterators_inline.h:146 - 2 BM_iter_new [inlined] () at /Users/ton/bf-blender/blender/source/blender/bmesh/intern/bmesh_iterators_inline.h:162 - 3 0x00000001001ff213 in createEdgeSlideVerts (t=0x10a126838) at bmesh_iterators_inline.h:5420%%%

%%%fixed r54875.%%%

%%%fixed r54875.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34415
No description provided.