fix [#34415] Edge slide results in segmentation fault on certain mesh